home-k8s/apps/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 977
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: container
          image: searxng/searxng:2026.7.26-b060c780d@sha256:sha256:33225510d0b03282a5f793c9daf915039300cdad0ff8469e8d352a1dc8f5736e
          securityContext:
            runAsUser: 977
            runAsGroup: 977
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: searxng
              mountPath: /etc/searxng
              subPath: etc/searxng
            - name: searxng
              mountPath: /var/cache/searxng
              subPath: var/cache/searxng
      volumes:
        - name: searxng
          persistentVolumeClaim:
            claimName: searxng
