home-k8s/apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
